--- a/Dockerfilex
+++ b/Dockerfilex
@@ -23,6 +23,4 @@ RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /
 USER appuser
 
 # During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
-#CMD ["gunicorn", "--bind", "0.0.0.0:8000", "optics.wsgi"]
-#CMD python manage.py migrate && python manage.py collectstatic --noinput && gunicorn optics.wsg
-CMD sh -c "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:8000 optics.wsgi"
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "optics.wsgi"]
