--- a/Dockerfile_vs
+++ b/Dockerfile_vs
@@ -14,6 +14,9 @@ COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN python -m pip install -r requirements.txt
 
+# Install Git
+RUN apt-get update && apt-get install -y git
+
 WORKDIR /app
 COPY . /app
 
