--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -26,8 +26,8 @@ COPY requirements.txt /tmp/pip-tmp/
 RUN pip3 --disable-pip-version-check --no-cache-dir install -r /tmp/pip-tmp/requirements.txt \
   && rm -rf /tmp/pip-tmp
 
-WORKDIR /app
-COPY .. /app
+WORKDIR /workspaces
+COPY .. /workspaces
 
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
